# crazyflie-link-cpp

./: CMakeLists.txt  README.md
examples/: UdpTest.cpp  benchmark.cpp
include/crazyflieLinkCpp/: Packet.hpp
src/: BoostUdpWrapper.cpp  BoostUdpWrapper.h  Connection.cpp  ConnectionImpl.h  CrazyfileUdp.cpp  CrazyfileUdp.h  CrazyfileUdpThread.cpp  CrazyfileUdpThread.h  USBManager.cpp  USBManager.h  UdpManager.cpp  UdpManager.h
